test/libsolidity/syntaxTests/nameAndTypeResolution/538_array_length_invalid_expression_bool_divides_int.sol
contract C {
    uint[1/true] ids;
}
// ----
// TypeError: (22-28): Invalid array length, expected integer literal or constant expression.
